# Euro-trends-BMW-x-ISM-field-project-for-mapping-Devops-roles-to-salary-data

./: .editorconfig  .gitignore  ARCHITECTURE.md  BMW Data Set for WebApp.xlsx  BMW PBI new.pbix  BRANCH_CONSOLIDATION.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  GITHUB_CHECKLIST.md  INTEGRATION_COMPLETE.md  LICENSE  Procfile  QUICKSTART.md  README.md  RELEASE_SUMMARY.md  SECURITY.md  SETUP_GUIDE.md  START_APPLICATION.bat  STOP_APPLICATION.bat  pyproject.toml  setup.py  verify_setup.py
.do/: app.yaml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci-cd.yml
RuroTrends/: .replit  README.md  VERIFICATION_REPORT.md  app.py  data_processor.py  pyproject.toml  replit.md  requirements.txt  run_streamlit.bat
RuroTrends/.streamlit/: config.toml
backend/: app.py  data_processor.py  forecasting.py  inspect_bmw_data.py  requirements.txt  run_backend.bat  test_bmw_load.py  test_integration.py  test_minimal_flask.py  utils.py  visualizations.py
backend/tests/: test_status.py
backend/uploads/: .gitkeep
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  run_frontend.bat  tsconfig.json
frontend/src/: App.css  App.tsx  react-plotly.d.ts
infra/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
